--- a/test_Lorenz63_EM.ipynb
+++ b/test_Lorenz63_EM.ipynb
@@ -9,8 +9,12 @@
     "# Problem statement\n",
     "Data assimilation, widely applied in geosciences, is to estimate the hidden state of a system by incoporating an observed data and a dynamical model. In its context, the state-space model is considered as follows\n",
     "\n",
-    "\\begin{align} \\begin{cases} x_t & = m(x_{t-1}) + \\eta_t,\\qquad \\eta_t \\sim \\mathcal{N} (0,Q) \\\\\n",
-    " y_t & = h(x_t) + \\epsilon_t, \\qquad  \\epsilon_t \\sim \\mathcal{N} (0,R),  \\end{cases} \\end{align} \n",
+    "\\begin{align} \n",
+    "\\begin{cases}\n",
+    "x_t & = m(x_{t-1}) + \\eta_t,\\qquad \\eta_t \\sim \\mathcal{N} (0,Q) \\\\\n",
+    "y_t & = h(x_t) + \\epsilon_t, \\qquad  \\epsilon_t \\sim \\mathcal{N} (0,R), \n",
+    "\\end{cases}\n",
+    "\\end{align} \n",
     " \n",
     "where $(x_t, y_t) \\in (\\mathcal{X},\\mathcal{Y}) \\triangleq \\mathbb{R}^{d_x} \\times \\mathbb{R}^{d_y},~ \\forall t = 1:T$. The functions $(m,h)$ and independent white noises $ (\\eta_t, \\epsilon_t)_{t=1:T}$, describe the evolution of successive states $ (x_{t-1},x_t)_{t=1:T}$, and the transformation between states $ (x_t)_{t=1:T}$ and  measurements $ (y_t)_{t=1:T}$. Initial state $(x_0)$ is assumed to have a Gaussian distribution $p(x_0) = \\mathcal{N}(x^b,B)$.\n",
     "\n",
@@ -21,7 +25,9 @@
     "This Python library, including the novel CPF-BS-S(A)EM and existing EM algorithms, was developed to carry out numerical experiments in the article and is also available for everyones who are interested in such topics.\n",
     "\n",
     "Here, as a particular case, we apply this library on a partially observed Lorenz-63 system where the dynamical model $(m)$ relating to an ordinary differential equation (ODE) system, \n",
-    "\\begin{align} \\frac{dx_\\tau}{d\\tau} = g(x_\\tau) \\end{align}\n",
+    "\\begin{align} \n",
+    "\\frac{dx_\\tau}{d\\tau} = g(x_\\tau)\n",
+    "\\end{align}\n",
     "where $\\tau \\in  \\mathbb{R}^+$ is an itergration time of the Lorenz-63 ODE and $g(x)  =\\left(10(x_2-x_1), ~ x_1(28-x_3) -x_2,~  x_1x_2 - 8/3 x_3 \\right)$, $~ \\forall x=(x_1,x_2,x_3)' \\in \\mathbb{R}^3$. The ODE system is solved by a Runge-Kutta scheme (order 5) and the value of $m(x_{t-1})$ is recorded at each predefined model step $(dt)$, which corresponds to nonlinearity level of $m$. An observation operator $H$ is instead set as $h$ is linear.\n",
     "\n",
     "This Python library is now used to compare different EM approaches in estimating error covariances $(Q,R)$ and latent states $x_{0:T} = (x_0,x_1,\\cdots, x_T)$, given a sequence of observations $y_{1:T} = (y_1,y_2,\\cdots, y_T)$ of the Lorenz-63 model. \n",
