--- a/test_Lorenz63_EM.ipynb
+++ b/test_Lorenz63_EM.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "In this system, statistical parmeters involved in the physical models and of error covariances in noise proccesses, have strongly affected to the reconstruction quality of the state. These parameters, especially error covariances, are usually difficult to identify and required to be reestimated in practice. Presently methods proposed to retrieve unknown parameters in nonlinear models often suffer from highly computational cost; and/or give estimates have some bias and/or large variance. To tackle these issues, we propose a new Expectation-maximization (EM)-based approach named CPF-BS-S(A)EM for both parameter estimation and state reconstruction in nonlinear state-space models.\n",
     " \n",
-    "The CPF-BS-S(A)EM method was introduced in details in the article *An efficient particle-based method for maximum likelihood estimates in nonlinear state-space models* of authors \"T.T.T. Chau, P. Ailliot, V. Monbet, P. Tandeo\", submitted to the Quarterly Journal of the Royal Meteorological Society.\n",
+    "The CPF-BS-S(A)EM method was introduced in details in the article *An efficient particle-based method for maximum likelihood estimates in nonlinear state-space models* of authors \"T.T.T. Chau, P. Ailliot, V. Monbet, P. Tandeo\".\n",
     "\n",
     "This Python library, including the novel CPF-BS-S(A)EM and existing EM algorithms, was created to carry out numerical experiments in the article and is also available for everyones who are interested in such topics.\n",
     "\n",
